# Notes-up

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Main  README.md  TODO.txt  changelog.md  codeowners  com.github.philip-scott.notes-up.json  com.github.philip-scott.notes-up.yml  com.github.philip_scott.notes-up.yml  index.html  install.sh  make.sh  meson.build  org.felipe.enotes.gschema.xml  pull_request.md  pull_request_template.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: main.yml
assets/css/: _buttons.scss  _reset.scss  _variables.scss  main.css  main.css.map  main.scss
assets/css/.sass-cache/768502b621bba06f709d15a51c0ddd43a335a86b/: _buttons.scssc  _reset.scssc  _variables.scssc  main.scssc
cmake/: GObjectIntrospectionMacros.cmake  Translations.cmake  ValaPrecompile.cmake  gresource.cmake
data/: CMakeLists.txt  Notes.desktop  assets.gresource.xml  com.github.philip-scott.notes-up.appdata.xml  com.github.philip-scott.notes-up.appdata.xml.in  com.github.philip-scott.notes-up.desktop  com.github.philip-scott.notes-up.desktop.in  com.github.philip-scott.notes-up.gresource.xml  com.github.philip-scott.notes-up.gschema.xml  com.github.philip-scott.notes-up.mime.xml  com.github.philip_scott.notes-up.appdata.xml.in  com.github.philip_scott.notes-up.desktop.in  com.github.philip_scott.notes-up.gresource.xml  com.github.philip_scott.notes_up.appdata.xml  meson.build  notes-up.desktop.in  noteup.lang  stylesheet.css
data/assets/highlightjs/: highlight.pack.js
data/assets/mathjax/: load-mathjax.js
data/assets/stylesheets/: air.css  elementary.css  modest.css
data/assets/stylesheets/app/: Application.css
data/assets/stylesheets/min/: air.min.css  elementary.min.css  modest.min.css
debian/: changelog  control  copyright
meson/: post_install.py
po/: CMakeLists.txt  LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.philip-scott.notes-up.pot  com.github.philip_scott.notes-up.pot  cr.po  cs.po  cu.po  cv.po  cy.po  cz.po  da.po  (+164 more)
po.old/: de.po  es.po  it.po  notes-up.pot
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+157 more)
schemas/: CMakeLists.txt  org.notes.gschema.xml
src/: Application.vala  CMakeLists.txt  Config.vala.cmake  Constants.vala.in  Main.vala  config.vala  meson.build
src/GranitePatches/: SourceList.vala
src/Plugins/: Break.vala  Color.vala  Highlight.vala  IFrame.vala  Image.vala  Manager.vala  Math.vala  Mathjax.vala  PageLink.vala  Plugin.vala  Youtube.vala
src/Services/: Bookmark.vala  ClockSettings.vala  DatabaseTable.vala  FileData.vala  FileManager.vala  Image.vala  Notebook.vala  Page.vala  PluginInterface.vala  Settings.vala  StyleLoader.vala  Tags.vala  Trash.vala  WordWrapper.vala
src/Styles/: air.vala  elementary.vala  modest.vala
src/Widgets/: BookmarkButton.vala  BookmarkItem.vala  Editor.vala  Headerbar.vala  HelpBox.vala  ImageSidebar.vala  NewNotebookDialog.vala  NotebookItem.vala  NotebookPicker.vala  PageInfoEditor.vala  PageItem.vala  PagesList.vala  PluginSidebar.vala  PreferencesDialog.vala  Sidebar.vala  SidebarItem.vala  ToolbarButton.vala  TrashItem.vala  ViewEditStack.vala  Viewer.vala  Window.vala
src/Widgets/Dialogs/: NewNotebookDialog.vala  NotebookListDialog.vala  PreferencesDialog.vala
src/Widgets/Sidebar/: BookmarkItem.vala  NotebookItem.vala  NotebookList.vala  Sidebar.vala  SidebarItem.vala  TagItem.vala  TrashItem.vala
vapi/: libmarkdown.vapi
